--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="utf-8" />
+  <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Audio Samples</title>
   <style>
@@ -81,7 +81,7 @@ audio {
       </td>
       <td>shift</td>
     </tr>
-    <!-- FF 5 sample 4 pieces of audios  -->
+
     <tr>
       <td>2</td>
       <td>
@@ -351,7 +351,7 @@ audio {
       </td>
       <td>bulrush</td>
     </tr>
-
+    </table>
 
   <!-- FF -->
   <h4>M05 (intelligibility-middle):</h4>
@@ -665,7 +665,7 @@ audio {
       </td>
       <td>battleship</td>
     </tr>
-
+    </table>
 
     <!-- FM -->
     <h4>M07 (intelligibility-low):</h4>
@@ -979,7 +979,7 @@ audio {
       </td>
       <td>anxieties</td>
     </tr>
-
+    </table>
     <!-- MM -->
     <h4>F03 (intelligibility-very low):</h4>
     <table border="1">
@@ -1291,9 +1291,7 @@ audio {
         </audio>
       </td>
       <td>bengal</td>
-    </tr>
-
-    
+    </tr> 
     </table>
        
 
