--- a/index.html
+++ b/index.html
@@ -998,27 +998,27 @@ audio {
       <td>1</td>
       <td>
         <audio controls>
-        <source src="./audios/F03/F03_B2_C8_M6_CONTROL_ori.wav.wav" type="audio/wav">
+        <source src="./audios/F03/F03_B2_C8_M6_CONTROL_ori.wav" type="audio/wav">
         </audio>
       </td>
       <td>
         <audio controls>
-        <source src="./audios/F03/F03_B2_C8_M6_CONTROL_JDNMF.wav.wav" type="audio/wav">
+        <source src="./audios/F03/F03_B2_C8_M6_CONTROL_JDNMF.wav" type="audio/wav">
         </audio>
       </td>  
       <td>
         <audio controls>
-        <source src="./audios/F03/F03_B2_C8_M6_CONTROL_DBLSTM.wav.wav" type="audio/wav">
+        <source src="./audios/F03/F03_B2_C8_M6_CONTROL_DBLSTM.wav" type="audio/wav">
         </audio>
       </td>
       <td>
         <audio controls>
-        <source src="./audios/F03/F03_B2_C8_M6_CONTROL_ASRTTS.wav.wav" type="audio/wav">
+        <source src="./audios/F03/F03_B2_C8_M6_CONTROL_ASRTTS.wav" type="audio/wav">
         </audio>
       </td>
       <td>
         <audio controls>
-        <source src="./audios/F03/F03_B2_C8_M6_CONTROL_TTSKD.wav.wav" type="audio/wav">
+        <source src="./audios/F03/F03_B2_C8_M6_CONTROL_TTSKD.wav" type="audio/wav">
         </audio>
       </td>
       <td>control</td>
@@ -1028,27 +1028,27 @@ audio {
       <td>2</td>
       <td>
         <audio controls>
-        <source src="./audios/F03/F03_B2_C12_M6_SENTENCE_ori.wav.wav" type="audio/wav">
+        <source src="./audios/F03/F03_B2_C12_M6_SENTENCE_ori.wav" type="audio/wav">
         </audio>
       </td>
       <td>
         <audio controls>
-        <source src="./audios/F03/F03_B2_C12_M6_SENTENCE_JDNMF.wav.wav" type="audio/wav">
+        <source src="./audios/F03/F03_B2_C12_M6_SENTENCE_JDNMF.wav" type="audio/wav">
         </audio>
       </td>  
       <td>
         <audio controls>
-        <source src="./audios/F03/F03_B2_C12_M6_SENTENCE_DBLSTM.wav.wav" type="audio/wav">
+        <source src="./audios/F03/F03_B2_C12_M6_SENTENCE_DBLSTM.wav" type="audio/wav">
         </audio>
       </td>
       <td>
         <audio controls>
-        <source src="./audios/F03/F03_B2_C12_M6_SENTENCE_ASRTTS.wav.wav" type="audio/wav">
+        <source src="./audios/F03/F03_B2_C12_M6_SENTENCE_ASRTTS.wav" type="audio/wav">
         </audio>
       </td>
       <td>
         <audio controls>
-        <source src="./audios/F03/F03_B2_C12_M6_SENTENCE_TTSKD.wav.wav" type="audio/wav">
+        <source src="./audios/F03/F03_B2_C12_M6_SENTENCE_TTSKD.wav" type="audio/wav">
         </audio>
       </td>
       <td>senetence</td>
@@ -1058,27 +1058,27 @@ audio {
       <td>3</td>
       <td>
         <audio controls>
-        <source src="./audios/F03/F03_B2_LN_M6_NOVEMBER_ori.wav.wav" type="audio/wav">
+        <source src="./audios/F03/F03_B2_LN_M6_NOVEMBER_ori.wav" type="audio/wav">
         </audio>
       </td>
       <td>
         <audio controls>
-        <source src="./audios/F03/F03_B2_LN_M6_NOVEMBER_JDNMF.wav.wav" type="audio/wav">
+        <source src="./audios/F03/F03_B2_LN_M6_NOVEMBER_JDNMF.wav" type="audio/wav">
         </audio>
       </td>  
       <td>
         <audio controls>
-        <source src="./audios/F03/F03_B2_LN_M6_NOVEMBER_DBLSTM.wav.wav" type="audio/wav">
+        <source src="./audios/F03/F03_B2_LN_M6_NOVEMBER_DBLSTM.wav" type="audio/wav">
         </audio>
       </td>
       <td>
         <audio controls>
-        <source src="./audios/F03/F03_B2_LN_M6_NOVEMBER_ASRTTS.wav.wav" type="audio/wav">
+        <source src="./audios/F03/F03_B2_LN_M6_NOVEMBER_ASRTTS.wav" type="audio/wav">
         </audio>
       </td>
       <td>
         <audio controls>
-        <source src="./audios/F03/F03_B2_LN_M6_NOVEMBER_TTSKD.wav.wav" type="audio/wav">
+        <source src="./audios/F03/F03_B2_LN_M6_NOVEMBER_TTSKD.wav" type="audio/wav">
         </audio>
       </td>
       <td>November</td>
@@ -1088,27 +1088,27 @@ audio {
       <td>4</td>
       <td>
         <audio controls>
-        <source src="./audios/F03/F03_B2_UW9_M6_SKYWARD_ori.wav.wav" type="audio/wav">
+        <source src="./audios/F03/F03_B2_UW9_M6_SKYWARD_ori.wav" type="audio/wav">
         </audio>
       </td>
       <td>
         <audio controls>
-        <source src="./audios/F03/F03_B2_UW9_M6_SKYWARD_JDNMF.wav.wav" type="audio/wav">
+        <source src="./audios/F03/F03_B2_UW9_M6_SKYWARD_JDNMF.wav" type="audio/wav">
         </audio>
       </td>  
       <td>
         <audio controls>
-        <source src="./audios/F03/F03_B2_UW9_M6_SKYWARD_DBLSTM.wav.wav" type="audio/wav">
+        <source src="./audios/F03/F03_B2_UW9_M6_SKYWARD_DBLSTM.wav" type="audio/wav">
         </audio>
       </td>
       <td>
         <audio controls>
-        <source src="./audios/F03/F03_B2_UW9_M6_SKYWARD_ASRTTS.wav.wav" type="audio/wav">
+        <source src="./audios/F03/F03_B2_UW9_M6_SKYWARD_ASRTTS.wav" type="audio/wav">
         </audio>
       </td>
       <td>
         <audio controls>
-        <source src="./audios/F03/F03_B2_UW9_M6_SKYWARD_TTSKD.wav.wav" type="audio/wav">
+        <source src="./audios/F03/F03_B2_UW9_M6_SKYWARD_TTSKD.wav" type="audio/wav">
         </audio>
       </td>
       <td>skyward</td>
@@ -1118,27 +1118,27 @@ audio {
       <td>5</td>
       <td>
         <audio controls>
-        <source src="./audios/F03/F03_B2_UW26_M6_ALTHOUGH_ori.wav.wav" type="audio/wav">
+        <source src="./audios/F03/F03_B2_UW26_M6_ALTHOUGH_ori.wav" type="audio/wav">
         </audio>
       </td>
       <td>
         <audio controls>
-        <source src="./audios/F03/F03_B2_UW26_M6_ALTHOUGH_JDNMF.wav.wav" type="audio/wav">
+        <source src="./audios/F03/F03_B2_UW26_M6_ALTHOUGH_JDNMF.wav" type="audio/wav">
         </audio>
       </td>  
       <td>
         <audio controls>
-        <source src="./audios/F03/F03_B2_UW26_M6_ALTHOUGH_DBLSTM.wav.wav" type="audio/wav">
+        <source src="./audios/F03/F03_B2_UW26_M6_ALTHOUGH_DBLSTM.wav" type="audio/wav">
         </audio>
       </td>
       <td>
         <audio controls>
-        <source src="./audios/F03/F03_B2_UW26_M6_ALTHOUGH_ASRTTS.wav.wav" type="audio/wav">
+        <source src="./audios/F03/F03_B2_UW26_M6_ALTHOUGH_ASRTTS.wav" type="audio/wav">
         </audio>
       </td>
       <td>
         <audio controls>
-        <source src="./audios/F03/F03_B2_UW26_M6_ALTHOUGH_TTSKD.wav.wav" type="audio/wav">
+        <source src="./audios/F03/F03_B2_UW26_M6_ALTHOUGH_TTSKD.wav" type="audio/wav">
         </audio>
       </td>
       <td>although</td>
@@ -1148,27 +1148,27 @@ audio {
       <td>6</td>
       <td>
         <audio controls>
-        <source src="./audios/F03/F03_B2_UW39_M6_BATHE_ori.wav.wav" type="audio/wav">
+        <source src="./audios/F03/F03_B2_UW39_M6_BATHE_ori.wav" type="audio/wav">
         </audio>
       </td>
       <td>
         <audio controls>
-        <source src="./audios/F03/F03_B2_UW39_M6_BATHE_JDNMF.wav.wav" type="audio/wav">
+        <source src="./audios/F03/F03_B2_UW39_M6_BATHE_JDNMF.wav" type="audio/wav">
         </audio>
       </td>  
       <td>
         <audio controls>
-        <source src="./audios/F03/F03_B2_UW39_M6_BATHE_DBLSTM.wav.wav" type="audio/wav">
+        <source src="./audios/F03/F03_B2_UW39_M6_BATHE_DBLSTM.wav" type="audio/wav">
         </audio>
       </td>
       <td>
         <audio controls>
-        <source src="./audios/F03/F03_B2_UW39_M6_BATHE_ASRTTS.wav.wav" type="audio/wav">
+        <source src="./audios/F03/F03_B2_UW39_M6_BATHE_ASRTTS.wav" type="audio/wav">
         </audio>
       </td>
       <td>
         <audio controls>
-        <source src="./audios/F03/F03_B2_UW39_M6_BATHE_TTSKD.wav.wav" type="audio/wav">
+        <source src="./audios/F03/F03_B2_UW39_M6_BATHE_TTSKD.wav" type="audio/wav">
         </audio>
       </td>
       <td>bathe</td>
@@ -1178,27 +1178,27 @@ audio {
       <td>7</td>
       <td>
         <audio controls>
-        <source src="./audios/F03/F03_B2_UW81_M6_ENDOWMENTS_ori.wav.wav" type="audio/wav">
+        <source src="./audios/F03/F03_B2_UW81_M6_ENDOWMENTS_ori.wav" type="audio/wav">
         </audio>
       </td>
       <td>
         <audio controls>
-        <source src="./audios/F03/F03_B2_UW81_M6_ENDOWMENTS_JDNMF.wav.wav" type="audio/wav">
+        <source src="./audios/F03/F03_B2_UW81_M6_ENDOWMENTS_JDNMF.wav" type="audio/wav">
         </audio>
       </td>  
       <td>
         <audio controls>
-        <source src="./audios/F03/F03_B2_UW81_M6_ENDOWMENTS_DBLSTM.wav.wav" type="audio/wav">
+        <source src="./audios/F03/F03_B2_UW81_M6_ENDOWMENTS_DBLSTM.wav" type="audio/wav">
         </audio>
       </td>
       <td>
         <audio controls>
-        <source src="./audios/F03/F03_B2_UW81_M6_ENDOWMENTS_ASRTTS.wav.wav" type="audio/wav">
+        <source src="./audios/F03/F03_B2_UW81_M6_ENDOWMENTS_ASRTTS.wav" type="audio/wav">
         </audio>
       </td>
       <td>
         <audio controls>
-        <source src="./audios/F03/F03_B2_UW81_M6_ENDOWMENTS_TTSKD.wav.wav" type="audio/wav">
+        <source src="./audios/F03/F03_B2_UW81_M6_ENDOWMENTS_TTSKD.wav" type="audio/wav">
         </audio>
       </td>
       <td>endowments</td>
@@ -1208,27 +1208,27 @@ audio {
       <td>8</td>
       <td>
         <audio controls>
-        <source src="./audios/F03/F03_B2_UW55_M6_BOTH_ori.wav.wav" type="audio/wav">
+        <source src="./audios/F03/F03_B2_UW55_M6_BOTH_ori.wav" type="audio/wav">
         </audio>
       </td>
       <td>
         <audio controls>
-        <source src="./audios/F03/F03_B2_UW55_M6_BOTH_JDNMF.wav.wav" type="audio/wav">
+        <source src="./audios/F03/F03_B2_UW55_M6_BOTH_JDNMF.wav" type="audio/wav">
         </audio>
       </td>  
       <td>
         <audio controls>
-        <source src="./audios/F03/F03_B2_UW55_M6_BOTH_DBLSTM.wav.wav" type="audio/wav">
+        <source src="./audios/F03/F03_B2_UW55_M6_BOTH_DBLSTM.wav" type="audio/wav">
         </audio>
       </td>
       <td>
         <audio controls>
-        <source src="./audios/F03/F03_B2_UW55_M6_BOTH_ASRTTS.wav.wav" type="audio/wav">
+        <source src="./audios/F03/F03_B2_UW55_M6_BOTH_ASRTTS.wav" type="audio/wav">
         </audio>
       </td>
       <td>
         <audio controls>
-        <source src="./audios/F03/F03_B2_UW55_M6_BOTH_TTSKD.wav.wav" type="audio/wav">
+        <source src="./audios/F03/F03_B2_UW55_M6_BOTH_TTSKD.wav" type="audio/wav">
         </audio>
       </td>
       <td>both</td>
@@ -1238,27 +1238,27 @@ audio {
       <td>9</td>
       <td>
         <audio controls>
-        <source src="./audios/F03/F03_B2_UW94_M6_FEATHER_ori.wav.wav" type="audio/wav">
+        <source src="./audios/F03/F03_B2_UW94_M6_FEATHER_ori.wav" type="audio/wav">
         </audio>
       </td>
       <td>
         <audio controls>
-        <source src="./audios/F03/F03_B2_UW94_M6_FEATHER_JDNMF.wav.wav" type="audio/wav">
+        <source src="./audios/F03/F03_B2_UW94_M6_FEATHER_JDNMF.wav" type="audio/wav">
         </audio>
       </td>  
       <td>
         <audio controls>
-        <source src="./audios/F03/F03_B2_UW94_M6_FEATHER_DBLSTM.wav.wav" type="audio/wav">
+        <source src="./audios/F03/F03_B2_UW94_M6_FEATHER_DBLSTM.wav" type="audio/wav">
         </audio>
       </td>
       <td>
         <audio controls>
-        <source src="./audios/F03/F03_B2_UW94_M6_FEATHER_ASRTTS.wav.wav" type="audio/wav">
+        <source src="./audios/F03/F03_B2_UW94_M6_FEATHER_ASRTTS.wav" type="audio/wav">
         </audio>
       </td>
       <td>
         <audio controls>
-        <source src="./audios/F03/F03_B2_UW94_M6_FEATHER_TTSKD.wav.wav" type="audio/wav">
+        <source src="./audios/F03/F03_B2_UW94_M6_FEATHER_TTSKD.wav" type="audio/wav">
         </audio>
       </td>
       <td>feather</td>
@@ -1268,27 +1268,27 @@ audio {
       <td>10</td>
       <td>
         <audio controls>
-        <source src="./audios/F03/F03_B2_UW46_M6_BENGAL_ori.wav.wav" type="audio/wav">
+        <source src="./audios/F03/F03_B2_UW46_M6_BENGAL_ori.wav" type="audio/wav">
         </audio>
       </td>
       <td>
         <audio controls>
-        <source src="./audios/F03/F03_B2_UW46_M6_BENGAL_JDNMF.wav.wav" type="audio/wav">
+        <source src="./audios/F03/F03_B2_UW46_M6_BENGAL_JDNMF.wav" type="audio/wav">
         </audio>
       </td>  
       <td>
         <audio controls>
-        <source src="./audios/F03/F03_B2_UW46_M6_BENGAL_DBLSTM.wav.wav" type="audio/wav">
+        <source src="./audios/F03/F03_B2_UW46_M6_BENGAL_DBLSTM.wav" type="audio/wav">
         </audio>
       </td>
       <td>
         <audio controls>
-        <source src="./audios/F03/F03_B2_UW46_M6_BENGAL_ASRTTS.wav.wav" type="audio/wav">
+        <source src="./audios/F03/F03_B2_UW46_M6_BENGAL_ASRTTS.wav" type="audio/wav">
         </audio>
       </td>
       <td>
         <audio controls>
-        <source src="./audios/F03/F03_B2_UW46_M6_BENGAL_TTSKD.wav.wav" type="audio/wav">
+        <source src="./audios/F03/F03_B2_UW46_M6_BENGAL_TTSKD.wav" type="audio/wav">
         </audio>
       </td>
       <td>bengal</td>
