--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ audio {
 
       <!-- MF -->
     <h4>F05 (intelligibility-high):</h4>
-    <table border="1">
+    <table border="1" width="50%">
     <tr>
       <td>No.</td>
       <td>Original</td>
