--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="utf-8" />
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Audio Samples</title>
+  <title>end-to-end dysarthric speech reconstruction</title>
   <style>
 body {
   margin:0;
@@ -19,7 +19,7 @@ body {
 }
 audio {
   width: 250px;
-  margin-right: 10px;
+  margin-right: 5px;
 }
 .sample {
   font-size: 0.9em;
