--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ body {
   padding:10px 30px;
   background: #fff;
   color: #111;
-  font-size: 15px;
+  font-size: 20px;
   font-family: Times New Rome;
   font-weight: 400;
   line-height: 1.8;
@@ -38,11 +38,11 @@ audio {
   <hr>
 
     <h2>System Comparison</h2>
-    <li><strong>Original:</strong> Original dysarthric speech.<li>
-    <li><strong>JDNMF:</strong> Joint Dictionary learning Non-negative Matrix Factorization based VC.<li>
-    <li><strong>DBLSTM:</strong> Deep Bidirectional Long-Short Term Memory based VC.<li>
-    <li><strong>ASR-TTS:</strong> Employ the ASR to obatain the dysarthric speech recognition results, which are used as the inputs of the TTS to synthesize normal speech.<li>
-    <li><strong>Proposed:</strong> Proposed dysarthric speech reconstruction system.<li>
+    <li><strong>Original:</strong> Original dysarthric speech.</li>
+    <li><strong>JDNMF:</strong> Joint Dictionary learning Non-negative Matrix Factorization based VC.</li>
+    <li><strong>DBLSTM:</strong> Deep Bidirectional Long-Short Term Memory based VC.</li>
+    <li><strong>ASR-TTS:</strong> Employ the ASR to obatain the dysarthric speech recognition results, which are used as the inputs of the TTS to synthesize normal speech.</li>
+    <li><strong>Proposed:</strong> Proposed dysarthric speech reconstruction system.</li>
 
   <hr>
 
