--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>end-to-end dysarthric speech reconstruction</title>
   <style>
-
+body {
+  font-size: 15px;
+}
 audio {
   width: 200px;
   margin-right: 10px;
