--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ audio {
 </head>
 <body>
     <h2>Audio samples: End-to-end voice conversion via cross-modal knowledge distillation for dysarthric speech reconstruction</h2>
-    <p><strong>Authors: </strong> Disong Wang, Jianwei Liu, Xinxi Wu, Songxiang Liu, Lifa Sun, Xunying Liu and Helen Meng</p>
+    <p><strong>Authors: </strong> Disong Wang, Jianwei Yu, Xinxi Wu, Songxiang Liu, Lifa Sun, Xunying Liu and Helen Meng</p>
     <p><strong>Abstract: </strong> Dysarthric speech reconstruction is a challenging task due to difficulties to repair unstable prosody and correct imprecise articulation. Inspired by the success of sequence-to-sequence (seq2seq) based text-to-speech (TTS) synthesis and knowledge distillation techniques, this paper proposes a novel end-to-end voice conversion (VC) method to tackle this task. Specifically, a seq2seq based TTS is first trained to generate normal speech. Then the cross-modal knowledge of TTS text-encoder is transferred to a speech-encoder, which is used to produce effective linguistic representations from the dysarthric speech. At the conversion phase, the speech-encoder can be concatenated with the attention and decoder modules of TTS system to directly map the dysarthric speech to its normal version.  Experiments show that the proposed method can generate the speech of high naturalness and intelligibility, with 35.35% and 48.65% absolute word error rate (WER) reduction for speakers with low and very low speech intelligibility, respectively.
 
   <hr>
