--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ audio {
     <li><strong>Original:</strong> Original dysarthric speech.</li>
     <li><strong>JDNMF:</strong> Joint Dictionary learning Non-negative Matrix Factorization based VC.</li>
     <li><strong>DBLSTM:</strong> Deep Bidirectional Long-Short Term Memory based VC.</li>
-    <li><strong>ASR-TTS:</strong> Employ the ASR to obatain the dysarthric speech recognition results, which are used as the inputs of the TTS to synthesize normal speech.</li>
+    <li><strong>ASR-TTS:</strong> Employ the ASR to obtain the dysarthric speech recognition results, which are used as the inputs of the TTS to synthesize normal speech.</li>
     <li><strong>Proposed:</strong> Proposed dysarthric speech reconstruction system.</li>
 
   <hr>
