--- a/index.html
+++ b/index.html
@@ -33,8 +33,11 @@ audio {
   <hr>
 
     <h3>Dysarthric speech reconstruction for different speakers</h3>
-
-      <!-- MF -->
+    <li>4 dysarthric speakers from 4 groups with different speech intelligibility are used for experiments: F05(high), M05(mid), M07(low), F03(very low). 'F' and 'M' denote female and male respectively.</li>
+    <li>The proposed method can be extended to other conversion task, such as speaker identity, emotion, speaking style and accent conversion, etc. </li> 
+    <li>By replacing the proposed single-speaker TTS with multi-speaker TTS, the proposed system can generate the high-quality speech that preserves both speaker identity and content, which is our future work.</li>
+  
+  <!-- MF -->
     <h4>F05 (intelligibility-high):</h4>
     <table border="1">
     <tr>
