--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ audio {
   <hr>
   
     <h2>Some additional observations and analysis</h2>
-    <li><strong>(1)</strong> The proposed method can effectively remove incorrect articulation repetitions, e.g., M05 speaker said 'whiskey key' for 'whiskey' and 'ab ablutions' for 'ablutions', the reconstructed speech has the correct articulations 'whiskey' and 'ablutions', please listen to M05-No.2 and M05-No.4 for more details.</li>
+    <li><strong>(1)</strong> The proposed method can effectively remove incorrect articulation repetitions, e.g., M05 speaker said 'whiskey key' for 'whiskey' and 'ab ablutions' for 'ablutions', the reconstructed speech has the correct articulations 'whiskey' and 'ablutions', please listen to <a href="#eg1">M05-No.2</a> and M05-No.4 for more details.</li>
     <li><strong>(2)</strong> Compared with the ASR-TTS, the proposed method preserves more similiar content with the original speech, please listen to M07-No.8, M07-No.10, F03-No.5 and F03-No.9 for more details. For ASR-TTS, when the ASR results are wrong, the TTS generates the speech with totally wrong content. However, the proposed method can extract and use the apropriate linguistic representations to generate the speech with more original content preservations, thus the recontructed speech sounds more like original content.</li>
   
   <hr>
@@ -401,7 +401,7 @@ audio {
     </tr>
 
     <tr>
-      <td>2</td>
+      <td><div id="eg1">2</div></td>
       <td>
         <audio controls>
         <source src="./audios/M05/M05_B2_LW_M6_WHISKEY_ori.wav" type="audio/wav">
